# GongDohaServer

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  NEXT-SESSION.md  README.md  config.env.example  docker-compose.yml
boot/: cmdline.txt.example  firstrun.sh  gong-firstrun.env.example
db/: courses-sudha-2026-2027.sql  gong.sql
docker/: Dockerfile  config.inc.php  entrypoint.sh
docs/: DEPLOY.md  DESHNA-QA.md  FIRSTRUN.md  OS-DELTAS.md  (+2 more)
ng/: README.md  pyproject.toml
ng/docker/: Dockerfile  config.toml  demo_seed.py  entrypoint.sh
ng/firstboot/: firstrun.sh  gong-firstboot.toml.example
ng/gong_ng/: __init__.py  __main__.py  clock.py  config.py  ctl.py  db.py  doha.py  jobs.py  model.py  player.py  relay.py  runtime.py  scheduler.py  timeset.py  usbmedia.py
ng/gong_ng/web/: __init__.py  auth.py  routes_api.py  routes_deshna.py  routes_ui.py
ng/gong_ng/web/static/: gong.css  gong.js
ng/gong_ng/web/templates/: backup.html.j2  base.html.j2  courses.html.j2  dashboard.html.j2  deshna.html.j2  login.html.j2  logs.html.j2  schedule.html.j2  sounds.html.j2  time.html.j2
ng/os/: config.toml.example  nftables.conf  sudoers.d-gong
ng/os/udev/: 99-gong-usb-media.rules
ng/seed/: courses-sudha-2026-2027.sql  deshna-seed.sql  doha-manifest.json  seed.sql
ng/systemd/: gong-firstboot.service  gong-usb-media-detach@.service  gong-usb-media@.service  gongd.service
ng/tests/: conftest.py  test_api.py  test_clock.py  test_deshna.py  test_doha.py  test_player.py  test_scheduler.py  test_seed.py
ng/tools/: convert_deshna_seed.py  convert_legacy_seed.py  hw-spike.sh
(+18 files in other folders)
