[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gong-ng"
version = "0.1.0"
description = "Gong/doha scheduler appliance for Vipassana centres (Raspberry Pi)"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3",
    "waitress>=2.1",
]

[project.optional-dependencies]
rpi = ["gpiozero>=2.0", "lgpio"]
dev = ["pytest>=7"]

[project.scripts]
gongctl = "gong_ng.ctl:main"

[tool.setuptools.packages.find]
include = ["gong_ng*"]

[tool.setuptools.package-data]
gong_ng = ["web/templates/*.j2", "web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
